--- a/Advent of Code (Haskell).ipynb
+++ b/Advent of Code (Haskell).ipynb
@@ -9,20 +9,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
     "import Data.List (findIndex)\n",
-    "import Data.Maybe\n",
     "import Data.String.Utils"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -41,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -65,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -93,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -101,7 +100,7 @@
     {
      "data": {
       "text/plain": [
-       "1783"
+       "Just 1783"
       ]
      },
      "metadata": {},
@@ -110,7 +109,7 @@
    ],
    "source": [
     "let currentFloorState = scanl1 (+) $ map floorDiff input\n",
-    "print . succ . fromMaybe (-1) $ findIndex (<0) currentFloorState"
+    "print $ (+1) <$> findIndex (<0) currentFloorState"
    ]
   },
   {
@@ -122,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -144,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -173,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
