--- a/Advent of Code (Haskell).ipynb
+++ b/Advent of Code (Haskell).ipynb
@@ -9,24 +9,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "import Data.List (findIndex)\n",
-    "import Data.String.Utils"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
+    "import Control.Lens\n",
+    "import Data.HashSet (HashSet)\n",
+    "import qualified Data.HashSet as HS\n",
+    "import Data.List (findIndex, foldl')\n",
+    "import Data.String.Utils\n",
+    "\n",
     "findInput :: Int -> IO String\n",
     "findInput pday = readFile $ \"inputs/input\" ++ show pday ++ \".txt\""
    ]
@@ -40,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 17,
    "metadata": {
     "collapsed": true
    },
@@ -64,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false
    },
@@ -80,7 +74,7 @@
     }
    ],
    "source": [
-    "print . sum $ map floorDiff input"
+    "sum $ map floorDiff input"
    ]
   },
   {
@@ -92,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false
    },
@@ -109,7 +103,7 @@
    ],
    "source": [
     "let currentFloorState = scanl1 (+) $ map floorDiff input\n",
-    "print $ (+1) <$> findIndex (<0) currentFloorState"
+    "(+1) <$> findIndex (<0) currentFloorState"
    ]
   },
   {
@@ -121,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 20,
    "metadata": {
     "collapsed": true
    },
@@ -143,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 21,
    "metadata": {
     "collapsed": false
    },
@@ -159,8 +153,8 @@
     }
    ],
    "source": [
-    "print $ sum [ 2*l*w + 2*l*h + 2*w*h + minimum [l*w, l*h, w*h]\n",
-    "            | [l, w, h] <- getLWHs $ lines input]"
+    "sum [ 2*l*w + 2*l*h + 2*w*h + minimum [l*w, l*h, w*h]\n",
+    "    | [l, w, h] <- getLWHs $ lines input]"
    ]
   },
   {
@@ -172,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 22,
    "metadata": {
     "collapsed": false
    },
@@ -188,8 +182,8 @@
     }
    ],
    "source": [
-    "print $ sum [ l*w*h + 2 * minimum [l+w, l+h, w+h]\n",
-    "            | [l, w, h] <- getLWHs $ lines input]"
+    "sum [ l*w*h + 2 * minimum [l+w, l+h, w+h]\n",
+    "    | [l, w, h] <- getLWHs $ lines input]"
    ]
   },
   {
@@ -201,22 +195,88 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
     "let day = 3\n",
-    "input <- findInput day"
+    "input <- findInput day\n",
+    "\n",
+    "dirFun :: Char -> ((Integer, Integer) -> (Integer, Integer))\n",
+    "dirFun c\n",
+    "    | c == '^' = over _2 (+1)\n",
+    "    | c == 'v' = over _2 (subtract 1)\n",
+    "    | c == '>' = over _1 (+1)\n",
+    "    | c == '<' = over _1 (subtract 1)\n",
+    "    \n",
+    "visitedSquares :: [Char] -> HashSet (Integer, Integer)\n",
+    "visitedSquares = HS.fromList . scanl (flip ($)) (0,0) . map dirFun"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Problem 5\n",
+    "### Problem 5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2592"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "HS.size $ visitedSquares input"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Problem 6"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2360"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "everyOther :: [a] -> ([a], [a])\n",
+    "everyOther (x:y:xs) = let (a, b) = everyOther xs\n",
+    "                      in (x:a, y:b)\n",
+    "everyOther (x:xs) = let (a, b) = everyOther xs\n",
+    "                    in (x:a, b)\n",
+    "everyOther [] = ([], [])\n",
+    "\n",
+    "let paths = both %~ (HS.fromList . scanl (flip ($)) (0,0)) . everyOther $ map dirFun input\n",
+    "HS.size $ uncurry HS.union paths"
    ]
   },
   {
