Day 3 (corrected checkpoint)

--- a/Advent of Code (Haskell).ipynb
+++ b/Advent of Code (Haskell).ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 30,
    "metadata": {
     "collapsed": false
    },
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 34,
    "metadata": {
     "collapsed": false
    },
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 35,
    "metadata": {
     "collapsed": false
    },
@@ -252,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 36,
    "metadata": {
     "collapsed": false
    },
@@ -275,7 +275,7 @@
     "                    in (x:a, b)\n",
     "everyOther [] = ([], [])\n",
     "\n",
-    "let paths = both %~ (HS.fromList . scanl (flip ($)) (0,0)) . everyOther $ map dirFun input\n",
+    "let paths = both %~ visitedSquares $ everyOther input\n",
     "HS.size $ uncurry HS.union paths"
    ]
   },
