--- a/Advent of Code (Haskell).ipynb
+++ b/Advent of Code (Haskell).ipynb
@@ -9,12 +9,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 37,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
+    "import Control.Arrow\n",
     "import Control.Lens\n",
     "import Data.HashSet (HashSet)\n",
     "import qualified Data.HashSet as HS\n",
@@ -195,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 38,
    "metadata": {
     "collapsed": false
    },
@@ -226,7 +227,8 @@
    "cell_type": "code",
    "execution_count": 35,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "scrolled": true
    },
    "outputs": [
     {
@@ -254,7 +256,8 @@
    "cell_type": "code",
    "execution_count": 36,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "scrolled": true
    },
    "outputs": [
     {
@@ -269,8 +272,8 @@
    ],
    "source": [
     "everyOther :: [a] -> ([a], [a])\n",
-    "everyOther (x:y:xs) = let (a, b) = everyOther xs\n",
-    "                      in (x:a, y:b)\n",
+    "everyOther (x:y:xs) = ((x:), (y:)) *** everyOther xs\n",
+    "        \n",
     "everyOther (x:xs) = let (a, b) = everyOther xs\n",
     "                    in (x:a, b)\n",
     "everyOther [] = ([], [])\n",
