--- a/Advent of Code (Haskell).ipynb
+++ b/Advent of Code (Haskell).ipynb
@@ -254,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 41,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -272,10 +272,8 @@
    ],
    "source": [
     "everyOther :: [a] -> ([a], [a])\n",
-    "everyOther (x:y:xs) = ((x:), (y:)) *** everyOther xs\n",
-    "        \n",
-    "everyOther (x:xs) = let (a, b) = everyOther xs\n",
-    "                    in (x:a, b)\n",
+    "everyOther (x:y:xs) = (x:) *** (y:) $ everyOther xs\n",
+    "everyOther (x:xs) = (x:) *** id $ everyOther xs\n",
     "everyOther [] = ([], [])\n",
     "\n",
     "let paths = both %~ visitedSquares $ everyOther input\n",
