--- a/Advent of Code.ipynb
+++ b/Advent of Code.ipynb
@@ -9,15 +9,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 37,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "def get_input(pday):\n",
-    "    with open('inputs/input%d.txt' % pday) as f:\n",
-    "        return f.read().strip()"
+    "import Control.Arrow\n",
+    "import Control.Lens\n",
+    "import Data.HashSet (HashSet)\n",
+    "import qualified Data.HashSet as HS\n",
+    "import Data.List (findIndex, foldl')\n",
+    "import Data.String.Utils\n",
+    "\n",
+    "findInput :: Int -> IO String\n",
+    "findInput pday = readFile $ \"inputs/input\" ++ show pday ++ \".txt\""
    ]
   },
   {
@@ -29,16 +35,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 17,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "day = 1\n",
-    "input = get_input(day)\n",
+    "let day = 1\n",
+    "input <- findInput day\n",
     "\n",
-    "m = {'(': 1, ')': -1}"
+    "floorDiff :: Char -> Int\n",
+    "floorDiff c\n",
+    "    | c == '(' = 1\n",
+    "    | c == ')' = -1"
    ]
   },
   {
@@ -50,21 +59,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "232\n"
-     ]
+     "data": {
+      "text/plain": [
+       "232"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
-    "print(sum(m[s] for s in input))"
+    "sum $ map floorDiff input"
    ]
   },
   {
@@ -76,26 +87,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1783\n"
-     ]
+     "data": {
+      "text/plain": [
+       "Just 1783"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
-    "c = 0\n",
-    "for i, s in enumerate(input):\n",
-    "    c += m[s]\n",
-    "    if c < 0:\n",
-    "        print(i+1)\n",
-    "        break"
+    "let currentFloorState = scanl1 (+) $ map floorDiff input\n",
+    "(+1) <$> findIndex (<0) currentFloorState"
    ]
   },
   {
@@ -107,14 +116,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 20,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "day = 2\n",
-    "input = get_input(day)"
+    "let day = 2\n",
+    "input <- findInput day\n",
+    "\n",
+    "getLWHs :: [String] -> [[Int]]\n",
+    "getLWHs = map (map read . split \"x\")"
    ]
   },
   {
@@ -126,25 +138,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 21,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1588178\n"
-     ]
+     "data": {
+      "text/plain": [
+       "1588178"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
-    "c = 0\n",
-    "for line in input.split('\\n'):\n",
-    "    [l,w,h] = map(int, line.split('x'))\n",
-    "    c += 2*l*w + 2*l*h + 2*w*h + min(l*w, l*h, w*h)\n",
-    "print(c)"
+    "sum [ 2*l*w + 2*l*h + 2*w*h + minimum [l*w, l*h, w*h]\n",
+    "    | [l, w, h] <- getLWHs $ lines input]"
    ]
   },
   {
@@ -156,25 +167,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 22,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "3783758\n"
-     ]
+     "data": {
+      "text/plain": [
+       "3783758"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
-    "c = 0\n",
-    "for line in input.split('\\n'):\n",
-    "    [l,w,h] = map(int, line.split('x'))\n",
-    "    c += l*w*h + 2*min(l+w, l+h, w+h)\n",
-    "print(c)"
+    "sum [ l*w*h + 2 * minimum [l+w, l+h, w+h]\n",
+    "    | [l, w, h] <- getLWHs $ lines input]"
    ]
   },
   {
@@ -186,22 +196,88 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
-    "day = 3\n",
-    "input = get_input(day)"
+    "let day = 3\n",
+    "input <- findInput day\n",
+    "\n",
+    "dirFun :: Char -> ((Integer, Integer) -> (Integer, Integer))\n",
+    "dirFun c\n",
+    "    | c == '^' = over _2 (+1)\n",
+    "    | c == 'v' = over _2 (subtract 1)\n",
+    "    | c == '>' = over _1 (+1)\n",
+    "    | c == '<' = over _1 (subtract 1)\n",
+    "    \n",
+    "visitedSquares :: [Char] -> HashSet (Integer, Integer)\n",
+    "visitedSquares = HS.fromList . scanl (flip ($)) (0,0) . map dirFun"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Problem 5\n",
+    "### Problem 5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {
+    "collapsed": false,
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2592"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "HS.size $ visitedSquares input"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Problem 6"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {
+    "collapsed": false,
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2360"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "everyOther :: [a] -> ([a], [a])\n",
+    "everyOther (x:y:xs) = (x:) *** (y:) $ everyOther xs\n",
+    "everyOther (x:xs) = (x:) *** id $ everyOther xs\n",
+    "everyOther [] = ([], [])\n",
+    "\n",
+    "let paths = both %~ visitedSquares $ everyOther input\n",
+    "HS.size $ uncurry HS.union paths"
    ]
   },
   {
@@ -219,8 +295,8 @@
    },
    "outputs": [],
    "source": [
-    "day = 4\n",
-    "input = get_input(day)"
+    "let day = 4\n",
+    "input <- findInput day"
    ]
   },
   {
@@ -246,8 +322,8 @@
    },
    "outputs": [],
    "source": [
-    "day = 5\n",
-    "input = get_input(day)"
+    "let day = 5\n",
+    "input <- findInput day"
    ]
   },
   {
@@ -273,8 +349,8 @@
    },
    "outputs": [],
    "source": [
-    "day = 6\n",
-    "input = get_input(day)"
+    "let day = 6\n",
+    "input <- findInput day"
    ]
   },
   {
@@ -300,8 +376,8 @@
    },
    "outputs": [],
    "source": [
-    "day = 7\n",
-    "input = get_input(day)"
+    "let day = 7\n",
+    "input <- findInput day"
    ]
   },
   {
@@ -327,8 +403,8 @@
    },
    "outputs": [],
    "source": [
-    "day = 8\n",
-    "input = get_input(day)"
+    "let day = 8\n",
+    "input <- findInput day"
    ]
   },
   {
@@ -354,8 +430,8 @@
    },
    "outputs": [],
    "source": [
-    "day = 9\n",
-    "input = get_input(day)"
+    "let day = 9\n",
+    "input <- findInput day"
    ]
   },
   {
@@ -381,8 +457,8 @@
    },
    "outputs": [],
    "source": [
-    "day = 10\n",
-    "input = get_input(day)"
+    "let day = 10\n",
+    "input <- findInput day"
    ]
   },
   {
@@ -408,8 +484,8 @@
    },
    "outputs": [],
    "source": [
-    "day = 11\n",
-    "input = get_input(day)"
+    "let day = 11\n",
+    "input <- findInput day"
    ]
   },
   {
@@ -435,8 +511,8 @@
    },
    "outputs": [],
    "source": [
-    "day = 12\n",
-    "input = get_input(day)"
+    "let day = 12\n",
+    "input <- findInput day"
    ]
   },
   {
@@ -462,8 +538,8 @@
    },
    "outputs": [],
    "source": [
-    "day = 13\n",
-    "input = get_input(day)"
+    "let day = 13\n",
+    "input <- findInput day"
    ]
   },
   {
@@ -489,8 +565,8 @@
    },
    "outputs": [],
    "source": [
-    "day = 14\n",
-    "input = get_input(day)"
+    "let day = 14\n",
+    "input <- findInput day"
    ]
   },
   {
@@ -516,8 +592,8 @@
    },
    "outputs": [],
    "source": [
-    "day = 15\n",
-    "input = get_input(day)"
+    "let day = 15\n",
+    "input <- findInput day"
    ]
   },
   {
@@ -543,8 +619,8 @@
    },
    "outputs": [],
    "source": [
-    "day = 16\n",
-    "input = get_input(day)"
+    "let day = 16\n",
+    "input <- findInput day"
    ]
   },
   {
@@ -570,8 +646,8 @@
    },
    "outputs": [],
    "source": [
-    "day = 17\n",
-    "input = get_input(day)"
+    "let day = 17\n",
+    "input <- findInput day"
    ]
   },
   {
@@ -597,8 +673,8 @@
    },
    "outputs": [],
    "source": [
-    "day = 18\n",
-    "input = get_input(day)"
+    "let day = 18\n",
+    "input <- findInput day"
    ]
   },
   {
@@ -624,8 +700,8 @@
    },
    "outputs": [],
    "source": [
-    "day = 19\n",
-    "input = get_input(day)"
+    "let day = 19\n",
+    "input <- findInput day"
    ]
   },
   {
@@ -651,8 +727,8 @@
    },
    "outputs": [],
    "source": [
-    "day = 20\n",
-    "input = get_input(day)"
+    "let day = 20\n",
+    "input <- findInput day"
    ]
   },
   {
@@ -678,8 +754,8 @@
    },
    "outputs": [],
    "source": [
-    "day = 21\n",
-    "input = get_input(day)"
+    "let day = 21\n",
+    "input <- findInput day"
    ]
   },
   {
@@ -705,8 +781,8 @@
    },
    "outputs": [],
    "source": [
-    "day = 22\n",
-    "input = get_input(day)"
+    "let day = 22\n",
+    "input <- findInput day"
    ]
   },
   {
@@ -732,8 +808,8 @@
    },
    "outputs": [],
    "source": [
-    "day = 23\n",
-    "input = get_input(day)"
+    "let day = 23\n",
+    "input <- findInput day"
    ]
   },
   {
@@ -759,8 +835,8 @@
    },
    "outputs": [],
    "source": [
-    "day = 24\n",
-    "input = get_input(day)"
+    "let day = 24\n",
+    "input <- findInput day"
    ]
   },
   {
@@ -786,8 +862,8 @@
    },
    "outputs": [],
    "source": [
-    "day = 25\n",
-    "input = get_input(day)"
+    "let day = 25\n",
+    "input <- findInput day"
    ]
   },
   {
@@ -803,21 +879,15 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
-   "name": "python3"
+   "display_name": "Haskell",
+   "language": "haskell",
+   "name": "haskell"
   },
   "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.5.0"
+   "codemirror_mode": "ihaskell",
+   "file_extension": ".hs",
+   "name": "haskell",
+   "version": "7.10.2"
   }
  },
  "nbformat": 4,
