--- a/Advent of Code.ipynb
+++ b/Advent of Code.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -196,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -205,14 +205,14 @@
     "let day = 3\n",
     "input <- findInput day\n",
     "\n",
-    "dirFun :: Char -> ((Integer, Integer) -> (Integer, Integer))\n",
+    "dirFun :: Char -> ((Int, Int) -> (Int, Int))\n",
     "dirFun c\n",
     "    | c == '^' = over _2 (+1)\n",
     "    | c == 'v' = over _2 (subtract 1)\n",
     "    | c == '>' = over _1 (+1)\n",
     "    | c == '<' = over _1 (subtract 1)\n",
     "    \n",
-    "visitedSquares :: [Char] -> HashSet (Integer, Integer)\n",
+    "visitedSquares :: [Char] -> HashSet (Int, Int)\n",
     "visitedSquares = HS.fromList . scanl (flip ($)) (0,0) . map dirFun"
    ]
   },
@@ -225,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -254,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false,
     "scrolled": true
