--- a/Advent of Code.ipynb
+++ b/Advent of Code.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 24,
    "metadata": {
     "collapsed": false
    },
@@ -17,9 +17,10 @@
    "source": [
     "import Control.Arrow\n",
     "import Control.Lens\n",
+    "import Data.Hash.MD5\n",
     "import Data.HashSet (HashSet)\n",
     "import qualified Data.HashSet as HS\n",
-    "import Data.List (findIndex, foldl')\n",
+    "import Data.List (findIndex)\n",
     "import Data.String.Utils\n",
     "\n",
     "findInput :: Int -> IO String\n",
@@ -35,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 25,
    "metadata": {
     "collapsed": true
    },
@@ -59,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 26,
    "metadata": {
     "collapsed": false
    },
@@ -87,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 27,
    "metadata": {
     "collapsed": false
    },
@@ -116,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 28,
    "metadata": {
     "collapsed": true
    },
@@ -138,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 29,
    "metadata": {
     "collapsed": false
    },
@@ -167,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 30,
    "metadata": {
     "collapsed": false
    },
@@ -196,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 31,
    "metadata": {
     "collapsed": false
    },
@@ -225,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 32,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -254,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 33,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -289,22 +290,76 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
     "let day = 4\n",
-    "input <- findInput day"
+    "input = \"bgvyzdsv\"\n",
+    "\n",
+    "concatNumsToMD5 :: String -> [String]\n",
+    "concatNumsToMD5 s = map (md5s . Str . (s ++) . show) [0..]\n",
+    "\n",
+    "findIndexStartsWith :: String -> [String] -> Maybe Int\n",
+    "findIndexStartsWith s = findIndex ((== s) . take (length s))"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Problem 7\n",
+    "### Problem 7"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Just 254575"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "findIndexStartsWith \"00000\" $ concatNumsToMD5 input "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Problem 8"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Just 1038736"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "findIndexStartsWith \"000000\" $ concatNumsToMD5 input "
    ]
   },
   {
