--- a/Advent of Code.ipynb
+++ b/Advent of Code.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 43,
    "metadata": {
     "collapsed": false
    },
@@ -20,7 +20,7 @@
     "import Data.Hash.MD5\n",
     "import Data.HashSet (HashSet)\n",
     "import qualified Data.HashSet as HS\n",
-    "import Data.List (findIndex)\n",
+    "import Data.List (findIndex, group, isInfixOf)\n",
     "import Data.String.Utils\n",
     "\n",
     "findInput :: Int -> IO String\n",
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 44,
    "metadata": {
     "collapsed": true
    },
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 45,
    "metadata": {
     "collapsed": false
    },
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 46,
    "metadata": {
     "collapsed": false
    },
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 47,
    "metadata": {
     "collapsed": true
    },
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 48,
    "metadata": {
     "collapsed": false
    },
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 49,
    "metadata": {
     "collapsed": false
    },
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 50,
    "metadata": {
     "collapsed": false
    },
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 51,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -255,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 52,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -290,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 53,
    "metadata": {
     "collapsed": false
    },
@@ -300,10 +300,7 @@
     "input = \"bgvyzdsv\"\n",
     "\n",
     "concatNumsToMD5 :: String -> [String]\n",
-    "concatNumsToMD5 s = map (md5s . Str . (s ++) . show) [0..]\n",
-    "\n",
-    "findIndexStartsWith :: String -> [String] -> Maybe Int\n",
-    "findIndexStartsWith s = findIndex ((== s) . take (length s))"
+    "concatNumsToMD5 s = map (md5s . Str . (s ++) . show) [0..]"
    ]
   },
   {
@@ -315,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 54,
    "metadata": {
     "collapsed": false
    },
@@ -331,7 +328,7 @@
     }
    ],
    "source": [
-    "findIndexStartsWith \"00000\" $ concatNumsToMD5 input "
+    "findIndex (startswith \"00000\") $ concatNumsToMD5 input "
    ]
   },
   {
@@ -343,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 55,
    "metadata": {
     "collapsed": false
    },
@@ -359,7 +356,7 @@
     }
    ],
    "source": [
-    "findIndexStartsWith \"000000\" $ concatNumsToMD5 input "
+    "findIndex (startswith \"000000\") $ concatNumsToMD5 input "
    ]
   },
   {
@@ -371,22 +368,89 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 56,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
     "let day = 5\n",
-    "input <- findInput day"
+    "input <- findInput day\n",
+    "\n",
+    "isNice :: String -> Bool\n",
+    "isNice s = and [ not $ any (`isInfixOf` s) [\"ab\", \"cd\", \"pq\", \"xy\"]\n",
+    "               , (>=3) . length $ filter (`elem` \"aeiou\") s\n",
+    "               , any ((>=2) . length) $ group s\n",
+    "               ]\n",
+    "\n",
+    "everyOther :: [a] -> ([a], [a])\n",
+    "everyOther (x:y:xs) = (x:) *** (y:) $ everyOther xs\n",
+    "everyOther (x:xs) = (x:) *** id $ everyOther xs\n",
+    "everyOther [] = ([], [])\n",
+    "\n",
+    "isNice2 s = g s && f s\n",
+    "    where f s = let (a, b) = everyOther s\n",
+    "                in any (\\x -> or . zipWith (==) x $ tail x) [a, b]\n",
+    "          g s = or [ any ([a, b] `isInfixOf`) [c, d] \n",
+    "                   | (i, a, b) <- zip3 [0..] s $ tail s\n",
+    "                   , let (c, d) = _2 %~ (drop 2) $ splitAt i s\n",
+    "                   ]"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Problem 9\n",
+    "### Problem 9"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "238"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "length . filter isNice $ lines input"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Problem 10"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "69"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "length . filter isNice2 $ lines input"
    ]
   },
   {
@@ -493,9 +557,33 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Problem 17\n",
+    "### Problem 17"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Problem 18"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
