--- a/Python/Advent of Code.ipynb
+++ b/Python/Advent of Code.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -15,11 +15,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "74\n",
+      "1795\n"
+     ]
+    }
+   ],
    "source": [
     "day = 1\n",
     "input = get_input(day)\n",
@@ -38,11 +47,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1606483\n",
+      "3842356\n"
+     ]
+    }
+   ],
    "source": [
     "day = 2\n",
     "input = get_input(day)\n",
@@ -62,11 +80,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2081\n",
+      "2341\n"
+     ]
+    }
+   ],
    "source": [
     "day = 3\n",
     "input = get_input(day)\n",
@@ -98,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -108,8 +135,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "254575\n",
-      "1038736\n"
+      "117946\n",
+      "3938038\n"
      ]
     }
    ],
@@ -132,11 +159,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "238\n",
+      "69\n"
+     ]
+    }
+   ],
    "source": [
     "day = 5\n",
     "input = get_input(day)\n",
@@ -159,11 +195,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "543903\n",
+      "14687245\n"
+     ]
+    }
+   ],
    "source": [
     "day = 6\n",
     "input = get_input(day)\n",
@@ -200,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -209,8 +254,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3176\n",
-      "14710\n"
+      "46065\n",
+      "14134\n"
      ]
     }
    ],
@@ -263,6 +308,47 @@
     "               for pair in instr_map.items())\n",
     "sol2 = get_node_value(instrs, 'a')\n",
     "print(sol2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1333\n",
+      "2046\n"
+     ]
+    }
+   ],
+   "source": [
+    "day = 8\n",
+    "input = get_input(day)\n",
+    "\n",
+    "s = 0\n",
+    "for line in input.split('\\n'):\n",
+    "    s += len(line)\n",
+    "    s -= len(eval(line))\n",
+    "# Part 1\n",
+    "print(s)\n",
+    "\n",
+    "s = 0\n",
+    "for line in input.split('\\n'):\n",
+    "    for c in line:\n",
+    "        if c in ['\\\\', '\"']:\n",
+    "            s += 2\n",
+    "        else:\n",
+    "            s += 1\n",
+    "    s += 2 # surrounding quotes\n",
+    "    s -= len(line)\n",
+    " \n",
+    "# Part 2\n",
+    "print(s)"
    ]
   },
   {
