--- a/Python/Advent of Code.ipynb
+++ b/Python/Advent of Code.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -15,20 +15,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "74\n",
-      "1795\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "day = 1\n",
     "input = get_input(day)\n",
@@ -47,20 +38,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1606483\n",
-      "3842356\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "day = 2\n",
     "input = get_input(day)\n",
@@ -80,20 +62,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2081\n",
-      "2341\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "day = 3\n",
     "input = get_input(day)\n",
@@ -125,21 +98,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "117946\n",
-      "3938038\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "day = 4\n",
     "input = get_input(day)\n",
@@ -159,20 +123,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "238\n",
-      "69\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "day = 5\n",
     "input = get_input(day)\n",
@@ -195,20 +150,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "543903\n",
-      "14687245\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "day = 6\n",
     "input = get_input(day)\n",
@@ -245,20 +191,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "46065\n",
-      "14134\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "day = 7\n",
     "input = get_input(day)\n",
@@ -312,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 116,
    "metadata": {
     "collapsed": false
    },
@@ -321,14 +258,122 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1333\n",
-      "2046\n"
+      "46065\n",
+      "14134\n"
      ]
     }
    ],
    "source": [
+    "# Alternate Day 7\n",
+    "day = 7\n",
+    "input = get_input(day)\n",
+    "\n",
+    "import re\n",
+    "from collections import defaultdict\n",
+    "from functools import partial\n",
+    "from operator import inv, and_, or_, lshift, rshift\n",
+    "\n",
+    "# Probably some deferred library out there, oh well\n",
+    "class Deferred(object):\n",
+    "    def __init__(self, val=None):\n",
+    "        self.callbacks = []\n",
+    "        self.val = val\n",
+    "    \n",
+    "    def add_callback(self, callback):\n",
+    "        self.callbacks.append(callback)\n",
+    "        if self.val is not None:\n",
+    "            callback(self.val)\n",
+    "    \n",
+    "    def callback(self, val):\n",
+    "        self.val = val\n",
+    "        for callback in self.callbacks:\n",
+    "            callback(self.val)\n",
+    "\n",
+    "class Node(object):\n",
+    "    def __init__(self, a=None, op=None, b=None):\n",
+    "        self.a = None\n",
+    "        self.op = op\n",
+    "        self.b = None\n",
+    "        def callback(self, attr, val):\n",
+    "            setattr(self, attr, val)\n",
+    "        if a:\n",
+    "            a.add_callback(partial(callback, self, 'a'))\n",
+    "        if b:\n",
+    "            b.add_callback(partial(callback, self, 'b'))\n",
+    "        self.val = None\n",
+    "        self.dirty = False\n",
+    "\n",
+    "    def get_val(self):\n",
+    "        self.dirty = True\n",
+    "        def get_param(v):\n",
+    "            return v if isinstance(v, int) else v.get_val()\n",
+    "        if self.val:\n",
+    "            pass\n",
+    "        elif not self.a and not self.op:\n",
+    "            self.val = get_param(self.b)\n",
+    "        elif not self.a:\n",
+    "            self.val = self.op(get_param(self.b))\n",
+    "        else:\n",
+    "            self.val = self.op(get_param(self.a),\n",
+    "                               get_param(self.b))\n",
+    "        return self.val\n",
+    "    \n",
+    "    def rebuild(self):\n",
+    "        self.val = None\n",
+    "        self.dirty = False\n",
+    "        if isinstance(self.a, Node) and self.a.dirty:\n",
+    "            self.a.rebuild()\n",
+    "        if isinstance(self.b, Node) and self.b.dirty:\n",
+    "            self.b.rebuild()\n",
+    "        \n",
+    "\n",
+    "ops = {\n",
+    "    'NOT': inv,\n",
+    "    'AND': and_,\n",
+    "    'OR': or_,\n",
+    "    'LSHIFT': lshift,\n",
+    "    'RSHIFT': rshift,\n",
+    "}\n",
+    "\n",
+    "def _int(n):\n",
+    "    try:\n",
+    "        return int(n)\n",
+    "    except (ValueError, TypeError):\n",
+    "        return n\n",
+    "\n",
+    "def init_node_tree(input):\n",
+    "    m = defaultdict(Deferred)\n",
+    "    for line in input.split('\\n'):\n",
+    "        r = re.match(r'(?:(?:(\\S+) )?(\\S+) )?(\\S+) -> (\\S+)', line)\n",
+    "        a, op, b, v = r.group(1, 2, 3, 4)\n",
+    "        a = _int(a)\n",
+    "        b = _int(b)\n",
+    "        a = Deferred(a) if isinstance(a, int) else m[a]\n",
+    "        b = Deferred(b) if isinstance(b, int) else m[b]\n",
+    "        m[v].callback(Node(a, ops.get(op), b))\n",
+    "    return m\n",
+    "\n",
+    "nodes = init_node_tree(input)\n",
+    "ans1 = nodes['a'].val.get_val()\n",
+    "print(ans1)\n",
+    "\n",
+    "nodes['a'].val.rebuild()\n",
+    "nodes['b'].callback(ans1)\n",
+    "print(nodes['a'].val.get_val())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
     "day = 8\n",
     "input = get_input(day)\n",
+    "\n",
+    "import re\n",
     "\n",
     "s = 0\n",
     "for line in input.split('\\n'):\n",
@@ -339,14 +384,10 @@
     "\n",
     "s = 0\n",
     "for line in input.split('\\n'):\n",
-    "    for c in line:\n",
-    "        if c in ['\\\\', '\"']:\n",
-    "            s += 2\n",
-    "        else:\n",
-    "            s += 1\n",
+    "    s += len(re.escape(line))\n",
     "    s += 2 # surrounding quotes\n",
     "    s -= len(line)\n",
-    " \n",
+    "\n",
     "# Part 2\n",
     "print(s)"
    ]
