--- a/Python/Advent of Code.ipynb
+++ b/Python/Advent of Code.ipynb
@@ -394,6 +394,51 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "207\n",
+      "804\n"
+     ]
+    }
+   ],
+   "source": [
+    "day = 9\n",
+    "input = get_input(day)\n",
+    "\n",
+    "import re\n",
+    "from collections import defaultdict\n",
+    "from itertools import permutations\n",
+    "\n",
+    "m = defaultdict(dict)\n",
+    "for line in input.split('\\n'):\n",
+    "    x = re.match(r'(\\S+) to (\\S+) = (\\d+)', line)\n",
+    "    p1, p2 = x.group(1, 2)\n",
+    "    dist = int(x.group(3))\n",
+    "    m[p1][p2] = dist\n",
+    "    m[p2][p1] = dist\n",
+    "\n",
+    "mindist = float('inf')\n",
+    "maxdist = 0\n",
+    "for path in permutations(m.keys()):\n",
+    "    dist = sum(m[a][b] for a, b in zip(path, path[1:]))\n",
+    "    mindist = min(mindist, dist)\n",
+    "    maxdist = max(maxdist, dist)\n",
+    "\n",
+    "# Part 1\n",
+    "print(mindist)\n",
+    "# Part 2\n",
+    "print(maxdist)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
