--- a/Python/Advent of Code.ipynb
+++ b/Python/Advent of Code.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -435,6 +435,42 @@
     "print(mindist)\n",
     "# Part 2\n",
     "print(maxdist)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "252594\n",
+      "3579328\n"
+     ]
+    }
+   ],
+   "source": [
+    "day = 10\n",
+    "input = get_input(day)\n",
+    "\n",
+    "from itertools import groupby\n",
+    "\n",
+    "def look_and_say(input):\n",
+    "    return ''.join(str(len(list(v))) + k for k, v in groupby(input))\n",
+    "\n",
+    "p1 = input\n",
+    "for _ in range(40):\n",
+    "    p1 = look_and_say(p1)\n",
+    "print(len(p1))\n",
+    "\n",
+    "p2 = input\n",
+    "for _ in range(50):\n",
+    "    p2 = look_and_say(p2)\n",
+    "print(len(p2))"
    ]
   },
   {
